--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
-        "build:vue": "vue-cli-service build",
+        "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
         "start:lambda": "netlify-lambda serve src/netlify/functions",
         "build:lambda": "netlify-lambda build src/netlify/functions"
