--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
+        "serve:vue": "vue-cli-service serve",
+        "build:vue": "vue-cli-service build",
         "lint": "vue-cli-service lint",
         "start:lambda": "netlify-lambda serve src/netlify/functions",
         "build:lambda": "netlify-lambda build src/netlify/functions"
